# C-Projects

./: CMakeLists.txt  MPG design.docx  README.md  bmi.cpp  carClass.cpp  corporateSalesCode.cpp  daysMonth.cpp  distanceTraveled.cpp  magicDates.cpp  massandWeight.cpp  membershipFees.cpp  monthlyMSG.cpp  monthlyMessage.cpp  mpg  mpg.cpp  numberGuess.cpp  rainfall.cpp  restaurantBill  restaurantBill design.docx  restaurantBill.cpp  stadiumSeating  stadiumSeating.cpp  sumofNumbers.cpp  testScores.cpp  totalSales.cpp  vowelsAndCon.cpp  wordGame  wordGame.cpp
