cmake_minimum_required(VERSION 3.27)
project(cprojects)

set(CMAKE_CXX_STANDARD 17)

add_executable(C___Projects restaurantBill.cpp
        mpg.cpp
        stadiumSeating.cpp
        wordGame.cpp
        bmi.cpp
        massandWeight.cpp
        magicDates.cpp
        monthlyMessage.cpp
        monthlyMSG.cpp
        sumofNumbers.cpp
        membershipFees.cpp
        distanceTraveled.cpp
)
